--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_navigation">navigation</string>
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+    </string-array>
+    <string name="title_activity_navigation_drawer">navigationDrawer</string>
 </resources>
