--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,11 +14,18 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_navigation">navigation</string>
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
+    <string-array name="vehicle_brands">
+        <item>Toyota</item>
+        <item>Nissan</item>
+        <item>Honda</item>
+        <item>Mitsubishi</item>
+        <item>Other</item>
     </string-array>
     <string name="title_activity_navigation_drawer">navigationDrawer</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_select_vehicle">select_vehicle</string>
+    <string name="openDrawer" />
+    <string name="closeDrawer" />
 </resources>
